--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       rel="stylesheet"
     />
 
-    <title>React App</title>
+    <title>Dsarah Daniels</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
